# AIMO3

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
competitors/: AIMO3 Competitor Techniques.md
errors/: errors.md
examples/: extreme_synthetic_problems.csv  extreme_synthetic_problems_unlabeled.csv  hard_synthetic_problems.csv  hard_synthetic_problems_unlabeled.csv  sample_problems.csv
kaggle_dependency_utility/: aimo3_dependency_utility.ipynb  kernel-metadata.json
kaggle_kernel_submission/: aimo3_submission.ipynb  kernel-metadata.json
kaggle_kernel_submission_44_50/: aimo3_submission.ipynb  kernel-metadata.json
kaggle_kernel_submission_44_50_vanilla/: aimo3_submission.ipynb  kernel-metadata.json
notebooks/: aimo3_first_attempt.ipynb
project_prompts/: Let’s work together to solve_ https___www.kaggle.c.md  Prepare a research task everyday to inform me on p.md  What are our odds of making 44__Codex 5.3 local he.md  gptoss120b_execution_playbook.md
reference/: AIMO3_Reference_Problems.extracted.clean.txt  AIMO3_Reference_Problems.extracted.txt  reference_analysis_2026-02-11.md
roadmap/: execution_optimization_ideas_2026-02-13.md  final_run_2026-02-11.md  full_groq_run_2026-02-13.md  gptoss_error_analysis_2026-02-13.md  langgraph_system_design_2026-02-13.md  next_steps_todo.md  next_submission_playbook_2026-02-13.md  research_strategy_update_2026-02-11.md  robust_harness_todo_2026-02-13.md  robust_system_design_2026-02-11.md
scripts/: aimo3.py  build_reference_dataset.py  eval_notebook_proxy.py  generate_hard_synthetic_problems.py  run_sharded_reference_benchmark.py  run_submission_quality_gate.py
showcase/langgraph_groq_mastery/: README.md  langgraph_groq_solver.py  run_two_problem_demo.py
src/aimo3/: __init__.py  cli.py  client.py  kaggle_api.py  langgraph_solver.py  mini_solvers.py  parsing.py  pipeline.py  (+3 more)
src/aimo3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_client.py  test_kaggle_api.py  test_langgraph_solver.py  test_notebook_44_50_contract.py  test_notebook_44_50_local_gate.py  test_notebook_local_smoke.py  test_parsing.py  test_pipeline.py  test_prompts.py  test_sandbox.py  test_showcase_langgraph_groq_solver.py  test_solver.py  test_synthetic_generator.py
(+8 files in other folders)
